--- a/src/components/style.css
+++ b/src/components/style.css
@@ -90,7 +90,7 @@ body {
 
 .barCharts {
   margin: auto;
-  margin-top: 100px;
+  /* margin-top: 100px; */
   /* max-width: 480px; */
   width: 100%;
 }
